# mew

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  api-spec.yaml  db-socat-proxy.service  entrypoint.sh  llm-socat-proxy.service  llm.txt  pyproject.toml  server.py
Terraform/: main.tf  terraform.tfstate
app/api/routes/: auth.py  health.py
app/core/: auth.py  config.py  logging.py  roles.py  security.py
app/db/: base.py  session.py
app/models/: agent.py  agent_membership.py  user.py
app/proto/: user.proto
app/proto/agents/: agents.proto
app/proto/health/: health.proto  health_grpc.py  health_pb2.py  health_pb2.pyi
app/proto/roles/: roles.proto
app/proto/user/: user.proto  user_grpc.py  user_pb2.py  user_pb2.pyi
app/services/: agents_service.py  health_service.py  permission_service.py  roles_service.py  user_service.py
enclaves/daemons/: db-socat-proxy.service
enclaves/enclave_base/: Dockerfile
scripts/: gen_proto.py
terraform/: cloud_init.yaml  main.tf  terraform.tfstate.backup
