[project]
name = "mew"
version = "0.1.0"
description = "KB enrichment API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi",
    "uvicorn",
    "pyjwt>=2.10.1",
    "bcrypt>=4.2.1",
    "psycopg-binary>=3.2.4",
    "sqlalchemy>=2.0.38",
    "psycopg>=3.2.4",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.mypy]
# handle missing stubs
ignore_missing_imports = true

