[project]
name = "mew"
version = "0.1.0"
description = "KB enrichment API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.1",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "pyjwt",
    "bcrypt>=4.2.1",
    "psycopg-binary",
    "sqlalchemy",
    "grpclib>=0.4.7",
    "psycopg",
    "colorama>=0.4.6",
    "types-protobuf",
    "types-colorama",
    "types-greenlet",
    "mypy-protobuf",
]

[project.optional-dependencies]
dev = [
    "grpc-stubs",
    "mypy",
    "pytest",
]

[tool.mypy]
# handle missing stubs
ignore_missing_imports = true